--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,45 @@
 /* Header */
-.navigation {
+.header__navigation {
   width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
-.navigation, 
+.navigation__wrap{
+  display: flex;
+  align-items: baseline;
+}
+
+.header__navigation, 
 .navigation__logo,
 .navigation__menu {
   align-items: center;
 }
-.navigation .wrap-row {
-  align-items: baseline;
-}
-.navigation__logo svg {
+
+.navigation__logo .logo {
   margin-right: 82px;
   padding: 21px 0;
   vertical-align: middle;
 }
-.navigation a,
-li {
+
+.navigation__item,
+.navigation__link {
   font-weight: normal;
   font-size: 16px;
   line-height: 80px;
   color: var(--txt-c-dark);
   text-decoration: none;
   display: inline-block;
-  /* justify-content: stretch; */
 }
-.navigation li {
-  margin-right: 50px;
+ 
+.navigation__item {
+  /* margin-right: 50px; */
 }
 
 .navigation__dropdown {
   display: none;
 }
-.navigation__contacts a {
+ 
+.navigation__link {
 padding: 0 34px;
 }
 
@@ -44,10 +51,10 @@ padding: 0 34px;
   background-image: url('../img/intro_bg_1x.png');
   min-width: 1600px; 
 }
-.block-hero .wrap-row {
+.block-hero__button-wrap {
   margin-bottom: 30px;
 }
-.block-hero p {
+.block-hero__desc {
   margin: 27px 0;
 }
 .block-hero .accent-btn--big-blue {
@@ -73,9 +80,8 @@ padding: 0 34px;
   min-width: 1180px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
-.block-partners h2 {
+.block-partners__head {
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -86,16 +92,17 @@ padding: 0 34px;
 }
 .block-partners .wrapper {
   align-items: inherit;
-  justify-content: space-between;
 }
 
-.block-partners .block-partners__img-wrap{
+.block-partners__image-wrap{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 }
 
 /* About */
+.block-about__wrap {
+  display: flex;
+}
 .block-about__image-wrap {
   width: 611px;
   height: 900px;
@@ -108,10 +115,12 @@ padding: 0 34px;
 .block-about .wrapper {
   align-items: inherit;
 }
-.block-about h2 {
+.block-about__head {
   margin-top: 160px;
 }
-.block-about .wrap-col {
+
+.block-about__desc-wrap {
+  margin-top: 100px;
   max-width: 405px;
 }
 .block-about__desc {
@@ -138,18 +147,17 @@ padding: 0 34px;
 .block-about__logo {
   align-items: flex-start;
 }
-.block-about h3 {
-  padding-bottom: 30px;
-}
-.block-about article {
+.block-about__item {
   margin: 40px 0;
+}
+.block-about__desc-head {
+  padding-bottom: 30px;
 }
 .block-about__border-line {
   padding: 40px 0;
   border-bottom: 1px solid rgba(69, 88, 128, 0.2);
   border-top: 1px solid rgba(69, 88, 128, 0.2);
 }
-
 
 /* Portfolio */
 .block-portfolio {
@@ -177,6 +185,11 @@ padding: 0 34px;
   justify-content: space-between;
   min-width: 1600px; 
   margin-top: 40px;
+}
+.block-portfolio__col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .block-portfolio__1,
@@ -284,29 +297,59 @@ padding: 0 34px;
   background-image: url('../img/portfolio_11_@1x.png');
 }
 
-
-
 /* Reviews */
 .block-reviews {
   display: flex;
   flex-wrap: wrap;
 }
-.block-reviews h2 {
+.block-reviews__wrap {
+  display: flex;
+  justify-content: space-between;
+}
+.block-reviews__user {
+  display: flex;
+  flex-direction: column;
+}
+.block-reviews__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 30%;
+}
+.block-reviews__head {
   margin: 232px 0 56px;
 }
-.block-reviews article {
+.block-reviews__item {
+  justify-content: space-between;
   border: 1px solid rgba(69, 88, 128, 0.2);
   border-radius: 4px;
   padding: 38px 43px 32px;
-  margin: 0 28px;
+  margin: 0 29px;
 }
-.block-reviews p {
+.block-reviews__wrap .block-reviews__item:first-child {
+ margin-left: 0; 
+}
+.block-reviews__wrap .block-reviews__item:last-child {
+  margin-right: 0; 
+ }
+.block-reviews__desc {
   text-align: start;
 }
-.block-reviews picture {
-  margin: 50px 0 23px;
+.block-reviews__image {
+  margin: 90px 0 23px;
   height: 64px;
 }
+.block-reviews__link {
+  font-size: 18px;
+  line-height: 180%;
+  /* or 32px */
+  text-align: center;
+  text-decoration: none;
+  color: var(--txt-c-grey);
+  margin: 0;
+  padding: 0;
+}
+
 /* Try it */
 .block-testdrive {
   display: flex;
@@ -315,26 +358,80 @@ padding: 0 34px;
   min-width: 1600px; 
   margin-top: 110px;
 }
+
 .block-testdrive .wrapper {
   min-width: 1180px;
   justify-content: space-between;
 }
-.block-testdrive .wrap-row {
+
+.block-testdrive__wrap {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
+  align-items: baseline;
 }
-.block-testdrive h2 {
+
+.block-testdrive__head {
   color: var(--txt-c-light);
   margin: 50px 0 75px 0;
 }
-.block-testdrive p {
+.block-testdrive__desc {
   color: var(--txt-c-grey-light);
   margin-top: 20px;
 }
-.block-testdrive a{
+.block-testdrive__link {
 color: var(--txt-c-light-orange);
 text-decoration: none;
 cursor: pointer;
+vertical-align: middle;
+}
+#contact-us {
+  padding: 2px 9px 0 0;
+  transform: scale(2);
+  fill: #53C07E;
+}
+#contact-us:hover {
+  fill: #f2f552;
 }
 
-
 /* Footer */
+.footer__wrap {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 85px;
+}
+.footer__col {
+  max-width: 310px;
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  margin-bottom: 77px;
+}
+.footer__col .logo {
+  margin-bottom: 34px;
+}
+.footer__bottom {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid rgba(135, 146, 161, 0.08);
+}
+.footer__link,
+.footer__item {
+  font-size: 18px;
+  line-height: 225%;
+  /* or 40px */
+  text-decoration: none;
+  list-style-type: none;
+  color: var(--txt-c-grey);
+}
+.footer__networks {
+  display: flex;
+  justify-content: space-between;
+  min-width: 171px;
+  margin: 32px 0 25px;
+}
+.footer__right-side {
+
+}
